# CG-I

./: README.md
Clipping/: CMakeLists.txt  README.md  fragment_shader.frag  main.cpp  vertex_shader.vert
Scanline/: CMakeLists.txt  README.md  main.cpp
circunferencias/: CMakeLists.txt  main.cpp
